--- a/mainsite/firstapp/templates/first_web_2.html
+++ b/mainsite/firstapp/templates/first_web_2.html
@@ -23,7 +23,7 @@
             }
             .ui.vertical.segment.masthead {
                 height: 300px;
-                background-image: url({% staic 'images/star_banner.jpg' %});
+                background-image: url({% static 'images/star_banner.jpg' %});
                 background-size: cover;
                 background-position: 100% 80%;
             }
@@ -81,17 +81,17 @@
         <div class="ui divider"></div>
 
         <div class="ui  vertical segment">
-
-            <div class="ui container vertical segment">
+            {% for article in article_list %}
+                <div class="ui container vertical segment">
                 <a href="#">
                     <h1 class="ui header">
-                        First web
+                        {{ article.headline }}
                     </h1>
                 </a>
 
                 <i class="icon grey small unhide">10,000</i>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    {{ article.content|truncatewords:100 }}
                     <a href="#">
                         <i class="angle tiny double grey right icon">READMORE</i>
                     </a>
@@ -101,31 +101,11 @@
                     life
                 </div>
             </div>
-
-            <div class="ui container vertical segment">
-                <a href="#">
-                    <h1 class="ui header">
-                        First web
-                    </h1>
-                </a>
-
-                <i class="icon grey small unhide">10,000</i>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <a href="#">
-                        <i class="angle tiny double grey right icon">READMORE</i>
-                    </a>
-                </p>
-
-                <div class="ui mini  tag label">
-                    life
-                </div>
-            </div>
-
+            {% endfor %}
         </div>
 
         <div class="ui inverted  vertical very padded  segment">
-            Mugglecoding®
+            GeekLee®
         </div>
     </body>
 </html>
