提交评论的form验证视图和整个页面的视图分离

--- a/mainsite/firstapp/templates/article_detail.html
+++ b/mainsite/firstapp/templates/article_detail.html
@@ -76,7 +76,7 @@
             {% endfor %}
         </div>
         <div class="ui divider"></div>
-        <form class="ui error tiny form" method="post">
+        <form class="ui error tiny form" action="{% url 'comment' article.id %}" method="post">
             {% if form.errors %}
                 <div class="ui error message">
                     {{ form.errors }}
